# ImageScan-Agent

./: .gitignore  CLAUDE.md  imagescan-cli  imagescan_cleanup  imagescan_scan  pyproject.toml  requirements.txt  scan  start.sh  stop.sh
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  TECH_STACK.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EventLog.tsx  ScanHistory.tsx  ScanInput.tsx  ScanInterface.tsx  ScanProgress.tsx  ScanResults.tsx
frontend/hooks/: useWebSocket.ts
frontend/types/: scan.ts
imagescan/: __init__.py  scan.py
imagescan/agents/: __init__.py  executor_agent.py  knowledge_agent.py  master_agent.py  reflection_agent.py  scan_agent.py  validation_agent.py
imagescan/api/: __init__.py  main.py
imagescan/api/models/: __init__.py  chat.py  scan.py
imagescan/api/routes/: chat.py  events.py  scan.py
imagescan/api/websocket/: __init__.py  manager.py
imagescan/cli/: __init__.py  main.py
imagescan/core/: __init__.py  agent.py  compression.py  content_scanner.py  context.py  event_bus.py  events.py  filename_analyzer.py  filename_filter.py  framework_detector.py  llm_client.py  llm_parser.py  orchestrator.py  pattern_learner.py
imagescan/models/: credential.py  layer.py  metadata.py  task.py
imagescan/storage/: __init__.py  memory_store.py  simple_storage.py
imagescan/tools/: __init__.py  docker_tools.py  file_tools.py  framework_tools.py  registry.py  tar_tools.py  verification_tools.py
imagescan/utils/: database.py  logger.py  rules.py  summary.py
