[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagescan-agent"
version = "0.1.0"
description = "Intelligent Docker image credential scanner powered by LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ImageScan Team"}
]
keywords = ["docker", "security", "scanner", "llm", "credential"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # FastAPI & Web
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",

    # LLM
    "openai>=1.0.0",
    "tenacity>=8.2.3",

    # Docker
    "docker>=7.0.0",

    # Data Processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "toml>=0.10.2",

    # Database
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Utils
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
imagescan = "imagescan.cli.main:app"

[project.urls]
Homepage = "https://github.com/imagescan/imagescan-agent"
Documentation = "https://github.com/imagescan/imagescan-agent#readme"
Repository = "https://github.com/imagescan/imagescan-agent.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["imagescan*"]

[tool.setuptools.package-data]
"imagescan" = ["*.toml", "config/*.toml"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
